[enhancement] solve sonar issues